change user-skill post action
